--- a/res/layout-land/fragment_menu.xml
+++ b/res/layout-land/fragment_menu.xml
@@ -33,17 +33,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
+        android:gravity="center"
+        android:orientation="vertical"
         android:visibility="gone" >
-
+<!-- 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:orientation="vertical"
             android:gravity="right">
-
+ -->
             <Button
                 android:id="@+id/buttonPlay"
                 android:layout_width="wrap_content"
@@ -55,7 +55,7 @@
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
+<!-- 
             <Button
                 android:id="@+id/buttonFreeHints"
                 android:layout_width="wrap_content"
@@ -67,6 +67,7 @@
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+                 
         </LinearLayout>
 
         <LinearLayout
@@ -74,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:orientation="vertical" >
-
+-->
             <Button
                 android:id="@+id/buttonStats"
                 android:layout_width="wrap_content"
@@ -99,6 +100,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
-    </LinearLayout>
+    <!-- </LinearLayout> -->
 
 </RelativeLayout>
