--- a/res/layout/item_list_sections.xml
+++ b/res/layout/item_list_sections.xml
@@ -56,7 +56,8 @@
             android:layout_marginTop="12dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            android:src="@drawable/bg_section_progress" />
+            android:src="@drawable/bg_section_progress"
+            android:alpha="0.9" />
     </LinearLayout>
 
     <View
