--- a/res/drawable/bg_section_rounded.xml
+++ b/res/drawable/bg_section_rounded.xml
@@ -1,5 +1,18 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#AAFFFFFF" />
-    <stroke android:width="1dp" android:color="#BBFFFFFF" />
-    <corners android:radius="6dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+	<item>
+    	<shape >
+		    <solid android:color="#99FFFFFF" />
+		    <stroke android:width="1dp" android:color="#DDFFFFFF" />
+		    <corners android:radius="6dp" />
+		</shape>
+	</item>
+	<item >
+    	<bitmap android:gravity="left|center_vertical" android:tileMode="disabled" android:src="@drawable/test" />
+	</item>
+	<item>
+    	<shape >
+		    <solid android:color="#77FFFFFF" />
+		    <corners android:radius="6dp" />
+		</shape>
+	</item>
+</layer-list>
