--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -16,7 +16,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_section_rounded"
+            android:background="@drawable/bg_rounded"
             android:orientation="vertical"
             android:paddingBottom="2dp"
             android:paddingRight="5dp"
@@ -128,7 +128,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/bg_section_rounded"
+            android:background="@drawable/bg_rounded"
             android:orientation="vertical"
             android:paddingBottom="2dp"
             android:paddingRight="5dp"
