--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -32,7 +32,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/levelHints"
+            android:id="@+id/levelInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -43,12 +43,13 @@
             android:maxWidth="40dp"
             android:scaleType="fitCenter"
             android:src="@drawable/hints_button_selector" />
-
+        
         <TextView
             android:id="@+id/levelName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/levelPictureBigLayout"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -72,6 +73,7 @@
             android:layout_marginTop="22dp" >
 
             <LinearLayout
+                android:id="@+id/linearLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/levelCheckButton"
@@ -93,7 +95,7 @@
 
             <Button
                 android:id="@+id/levelCheckButton"
-                android:layout_width="100dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/grey_button_selector"
@@ -132,6 +134,21 @@
             android:textSize="26sp"
             android:textStyle="bold"
             android:visibility="gone" />
+
+        <ImageButton
+            android:id="@+id/levelHintLetters"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/levelHints"
+            android:layout_margin="8dp"
+            android:adjustViewBounds="true"
+            android:background="#00000000"
+            android:maxHeight="56dp"
+            android:maxWidth="40dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/letter_writer" />
+
     </RelativeLayout>
 
 </ScrollView>
