--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -55,7 +55,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="Le Colisée"
+            android:text=""
             android:textColor="#888"
             android:textSize="26sp"
             android:textStyle="bold" />
