--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -46,10 +46,9 @@
         
         <TextView
             android:id="@+id/levelName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/levelPictureBigLayout"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -140,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/levelHints"
+            android:layout_above="@+id/levelName"
             android:layout_margin="8dp"
             android:adjustViewBounds="true"
             android:background="#00000000"
