--- a/res/layout/ab_view_level.xml
+++ b/res/layout/ab_view_level.xml
@@ -4,31 +4,30 @@
         android:id="@+id/ab_level_difficulty_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-		android:layout_centerInParent="true"
+        android:layout_centerInParent="true"
         android:gravity="center" >
-
-        
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ab_level_hints_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone" >
 
         <TextView
             android:id="@+id/ab_level_hints_nb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:includeFontPadding="false"
             android:shadowColor="#FFF"
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="2"
-            android:includeFontPadding="false"
             android:textColor="#636363"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -48,5 +47,40 @@
             android:textSize="14sp"
             android:textStyle="normal" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/navigation_buttons"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center" >
+
+        <ImageButton
+            android:id="@+id/previous_level_button"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/next"
+            android:rotation="180" />
+
+        <ImageButton
+            android:id="@+id/next_level_button"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="15dp"
+            android:background="@null"
+            android:src="@drawable/next" />
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/grid_pictures_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@null"
+        android:src="@drawable/grid_pictures_small" />
 
 </merge>
